# easydocking

./: .gitignore  .gitmodules  HANDOFF.md  LONG_TERM_PLAN.md  README.md
.ppt_venv/: pyvenv.cfg
config/: docking.rviz
docs/: PX4迁移瓶颈分析_20260323.pptx  codex_fork_plan_workflow_20260329.md  debug_resume_20260324.txt  project_goal_and_validation_spec_20260327.md  px4_sih_terminal_alignment_plan.md  qgc_setup.md  resume_20260329_next_codex.md  tangent_release_goal_and_validation.md  ~$组会汇报_空中对接进展_20260323.pptx  方法部分_空中对接_20260323.pptx  组会汇报_空中对接进展_20260323.pptx  论文1_Aerial_Autonomous_Docking_总结.md
results/20260318_121910_mock_fixed_wing/: artifacts.txt  docking_log.csv  metadata.txt  summary.txt
results/milestones/: stable_0200_repro_latest
scripts/: check_tangent_release_semantics.py  classify_px4_sih_result.py  derive_orbit_handoff_window.py  derive_tangent_catchability.py  generate_animation.py  generate_group_meeting_ppt.py  generate_method_ppt.py  generate_px4_migration_ppt.py  generate_report.py  run_best_px4_sih_with_rviz.sh  run_docking_experiment.sh  run_geometry_sweep.sh  run_mock_fixed_wing_experiment.sh  run_px4_sih_docking_experiment.sh  run_px4_sih_orbit_only_experiment.sh  run_px4_sih_orbit_tracking_experiment.sh  run_state_machine_repeat.sh  run_until_success.sh  search_outer_ring_semantic.py  search_tangent_start_geometry.py  setup_local_env.sh  start_docking_command.sh  start_mock_fixed_wing_simulation.sh  start_px4_sih_simulation.sh  start_simulation.sh  summarize_px4_sih_batch.py  sweep_phase_late_start.sh  test_controller.sh  validate_m1_2_tracking_lateral_batch5.py  validate_m2_retry_improvement_batch5.py  validate_px4_change_batch.py  wait_for_docking_window.py
src/easydocking_control/: CMakeLists.txt  package.xml
src/easydocking_control/include/easydocking_control/: backstepping_controller.hpp  docking_controller.hpp  guidance_law.hpp  relative_estimator.hpp
src/easydocking_control/launch/: docking.launch.py  simulation.launch.py
src/easydocking_control/scripts/: auto_start_docking.py  experiment_logger.py  px4_fixed_wing_bridge.py  px4_odom_bridge.py  px4_offboard_bridge.py  rviz_visualizer.py  simple_dual_uav_sim.py
src/easydocking_control/src/: backstepping_controller.cpp  docking_controller.cpp  docking_controller_node.cpp  guidance_law.cpp  relative_estimator.cpp
src/easydocking_msgs/: CMakeLists.txt  package.xml
src/easydocking_msgs/msg/: DockingCommand.msg  DockingStatus.msg  RelativePose.msg  UAVState.msg
src/easydocking_msgs/srv/: StartDocking.srv  StopDocking.srv
